objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{00000000}</displayFormat>
        <label>Appointment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>